--- a/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.scss
+++ b/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.scss
@@ -45,3 +45,21 @@
     color: #155724;
   }
   
+
+  //spinner
+
+  .total-load-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  
+    mat-progress-spinner {
+      margin-right: 10px;
+    }
+  
+    span {
+      font-size: 1.2em;
+    }
+  }
+  
