--- a/src/app/departmentLoad/department-detail/department-detail.component.html
+++ b/src/app/departmentLoad/department-detail/department-detail.component.html
@@ -1,14 +1,14 @@
 <mat-dialog-content *ngIf="department" class="department-dialog" dir="rtl">
     <h2 mat-dialog-title class="dialog-title">{{ department.departName }}</h2>
     <div class="department-details">
-      <p><strong>Current Patients:</strong> {{ department.currentPatients }}</p>
-      <p><strong>Total Beds:</strong> {{ department.totalBeds }}</p>
-      <p><strong>Department Type:</strong> {{ department.departType }}</p>
-      <p><strong>currentStaff</strong> {{ department.currentStaff }}</p>
-      <p><strong>totalStaff</strong> {{ department.totalStaff }}</p>
-      <p><strong>patientComplexity</strong> {{ department.patientComplexity }}</p>
-      <p><strong>Chameleon Code:</strong> {{ department.departChameleonCode }}</p>
-      <p><strong>Total Load:</strong> {{ department.totalLoad | number: '1.0-2' }}%</p>
+      <p><strong>סה"כ מטופלים:</strong> {{ department.currentPatients }}</p>
+      <p><strong>סה"כ מיטות:</strong> {{ department.totalBeds }}</p>
+      <p><strong>סוג מחלקה:</strong> {{ department.departType }}</p>
+      <p><strong>צוות נוכחי:</strong> {{ department.currentStaff }}</p>
+      <p><strong>תקן צוות:</strong> {{ department.totalStaff }}</p>
+      <p><strong>מורכבות המטופל:</strong> {{ department.patientComplexity }}</p>
+      <p><strong>קוד מחלקה בקמיליון:</strong> {{ department.departChameleonCode }}</p>
+      <p><strong>מדד עומס:</strong> {{ department.totalLoad | number: '1.0-2' }}%</p>
     </div>
     <div mat-dialog-actions class="dialog-actions">
       <button mat-button mat-raised-button color="primary" (click)="onClose()">Close</button>
