--- a/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
+++ b/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
@@ -1,6 +1,6 @@
 <mat-sidenav-container class="sidenav-container" dir="rtl">
   <mat-sidenav #drawer class="sidenav" fixedInViewport="true" [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="!(isHandset$ | async)">
-    <mat-toolbar>תפריט <span>{{loginUserName}}</span></mat-toolbar>
+    <mat-toolbar>תפריט </mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/dashboard">דף הבית</a>
       <a mat-list-item href="#">מטופלים</a>
@@ -13,27 +13,13 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>מדד עומס</span>
+      <span>{{loginUserName}}</span>
     </mat-toolbar>
     <div class="content">
       <mat-card>
         <mat-card-header>
-          <!-- <mat-card-title>עומס מחלקה</mat-card-title> -->
+          <mat-card-title>עומס מחלקה</mat-card-title>
         </mat-card-header>
-        <ng-container matColumnDef="totalLoad">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> מדד עומס (%) </th>
-          <td mat-cell *matCellDef="let element" [ngClass]="getTotalLoadClass(element.totalLoad)">
-            <div class="total-load-container">
-              <mat-progress-spinner 
-                [value]="element.totalLoad"
-                mode="determinate"
-                diameter="50"
-                strokeWidth="5"
-                color="primary">
-              </mat-progress-spinner>
-              <span>{{element.totalLoad | number: '1.0-2'}}%</span>
-            </div>
-          </td>
-        </ng-container>
         <mat-card-content>
           <mat-form-field appearance="fill">
             <mat-label>סינון</mat-label>
@@ -79,6 +65,27 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClicked(row)"></tr>
           </table>
           <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </mat-card-content>
+      </mat-card>
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>מדד עומס כולל</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <ngx-gauge
+            [size]="200"
+            [value]="calculateTotalLoad(dataSource.data[0].currentPatients, dataSource.data[0].totalBeds)"
+            [min]="0"
+            [max]="100"
+            [type]="'semi'"
+            [cap]="'round'"
+            [thick]="15"
+            [label]="'מדד עומס כולל'"
+            [foregroundColor]="'#00ff00'"
+            [backgroundColor]="'#e0e0e0'"
+            [append]="'%'"
+            [duration]="1500">
+          </ngx-gauge>
         </mat-card-content>
       </mat-card>
     </div>
