--- a/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
+++ b/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
@@ -16,78 +16,77 @@
       <span>{{loginUserName}}</span>
     </mat-toolbar>
     <div class="content">
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>עומס מחלקה</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <mat-form-field appearance="fill">
-            <mat-label>סינון</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="סנן לפי שם המחלקה">
-          </mat-form-field>
-          <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-            <ng-container matColumnDef="departName">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> שם מחלקה </th>
-              <td mat-cell *matCellDef="let element"> {{element.departName}} </td>
-            </ng-container>
+      <div class="cards-container">
+        <mat-card class="table-card">
+          <mat-card-content>
+            <mat-form-field appearance="fill">
+              <mat-label>סינון</mat-label>
+              <input matInput (keyup)="applyFilter($event)" placeholder="סנן לפי שם המחלקה">
+            </mat-form-field>
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+              <ng-container matColumnDef="departName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> שם מחלקה </th>
+                <td mat-cell *matCellDef="let element"> {{element.departName}} </td>
+              </ng-container>
 
-            <ng-container matColumnDef="currentPatients">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> סה"כ מטופלים </th>
-              <td mat-cell *matCellDef="let element"> {{element.currentPatients}} </td>
-            </ng-container>
+              <ng-container matColumnDef="currentPatients">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> סה"כ מטופלים </th>
+                <td mat-cell *matCellDef="let element"> {{element.currentPatients}} </td>
+              </ng-container>
 
-            <ng-container matColumnDef="totalBeds">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> סה"כ מיטות </th>
-              <td mat-cell *matCellDef="let element"> {{element.totalBeds}} </td>
-            </ng-container>
+              <ng-container matColumnDef="totalBeds">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> סה"כ מיטות </th>
+                <td mat-cell *matCellDef="let element"> {{element.totalBeds}} </td>
+              </ng-container>
 
-            <ng-container matColumnDef="currentStaff">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> צוות נוכחי </th>
-              <td mat-cell *matCellDef="let element"> {{element.currentStaff}} </td>
-            </ng-container>
+              <ng-container matColumnDef="currentStaff">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> צוות נוכחי </th>
+                <td mat-cell *matCellDef="let element"> {{element.currentStaff}} </td>
+              </ng-container>
 
-            <ng-container matColumnDef="totalStaff">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> תקן צוות </th>
-              <td mat-cell *matCellDef="let element"> {{element.totalStaff}} </td>
-            </ng-container>
+              <ng-container matColumnDef="totalStaff">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> תקן צוות </th>
+                <td mat-cell *matCellDef="let element"> {{element.totalStaff}} </td>
+              </ng-container>
 
-            <ng-container matColumnDef="patientComplexity">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> מורכבות המטופל </th>
-              <td mat-cell *matCellDef="let element"> {{element.patientComplexity}} </td>
-            </ng-container>
+              <ng-container matColumnDef="patientComplexity">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> מורכבות המטופל </th>
+                <td mat-cell *matCellDef="let element"> {{element.patientComplexity}} </td>
+              </ng-container>
 
-            <ng-container matColumnDef="totalLoad">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> מדד עומס (%) </th>
-              <td mat-cell *matCellDef="let element" [ngClass]="getTotalLoadClass(element.totalLoad)"> {{element.totalLoad | number: '1.0-2'}}% </td>
-            </ng-container>
+              <ng-container matColumnDef="totalLoad">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> מדד עומס (%) </th>
+                <td mat-cell *matCellDef="let element" [ngClass]="getTotalLoadClass(element.totalLoad)"> {{element.totalLoad | number: '1.0-2'}}% </td>
+              </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClicked(row)"></tr>
-          </table>
-          <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-        </mat-card-content>
-      </mat-card>
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>מדד עומס כולל</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <ngx-gauge
-            [size]="200"
-            [value]="calculateTotalLoad(dataSource.data[0].currentPatients, dataSource.data[0].totalBeds)"
-            [min]="0"
-            [max]="100"
-            [type]="'semi'"
-            [cap]="'round'"
-            [thick]="15"
-            [label]="'מדד עומס כולל'"
-            [foregroundColor]="'#00ff00'"
-            [backgroundColor]="'#e0e0e0'"
-            [append]="'%'"
-            [duration]="1500">
-          </ngx-gauge>
-        </mat-card-content>
-      </mat-card>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClicked(row)"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+          </mat-card-content>
+        </mat-card>
+        <mat-card class="gauge-card">
+          <mat-card-header>
+            <mat-card-title>מדד עומס כולל</mat-card-title>
+          </mat-card-header>
+          <mat-card-content>
+            <ngx-gauge
+              [size]="200"
+              [value]="calculateTotalLoad(dataSource.data[0].currentPatients, dataSource.data[0].totalBeds)"
+              [min]="0"
+              [max]="100"
+              [type]="'semi'"
+              [cap]="'round'"
+              [thick]="15"
+              [label]="'מדד עומס כולל'"
+              [foregroundColor]="'#00ff00'"
+              [backgroundColor]="'#e0e0e0'"
+              [append]="'%'"
+              [duration]="1500">
+            </ngx-gauge>
+          </mat-card-content>
+        </mat-card>
+      </div>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
