--- a/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
+++ b/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
@@ -19,10 +19,15 @@
       <div class="cards-container">
         <mat-card class="table-card">
           <mat-card-content>
-            <mat-form-field appearance="fill">
-              <mat-label>סינון</mat-label>
-              <input matInput (keyup)="applyFilter($event)" placeholder="סנן לפי שם המחלקה">
-            </mat-form-field>
+            <div class="filter-container">
+              <mat-form-field appearance="fill">
+                <mat-label>סינון</mat-label>
+                <input matInput (keyup)="applyFilter($event)" placeholder="סנן לפי שם המחלקה">
+              </mat-form-field>
+              <button mat-icon-button aria-label="Reset filters" matTooltip="אפס חיפוש" (click)="resetFilters()" class="reset-filters-button">
+                <mat-icon>clear</mat-icon>
+              </button>
+            </div>
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
               <ng-container matColumnDef="departName">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -68,7 +73,6 @@
                 <td mat-cell *matCellDef="let element" [ngClass]="getTotalLoadClass(element.totalLoad)"> {{element.totalLoad | number: '1.0-2'}}% </td>
               </ng-container>
 
-           
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClicked(row)"></tr>
