--- a/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.scss
+++ b/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.scss
@@ -90,6 +90,9 @@ ngx-gauge {
   font-weight: bold;
 }
 
+.total-patients span {
+  display: block;
+}
 .mat-form-field {
   margin-top: 10px;
   width: 100%;
