--- a/src/app/server-ping-check-app/server-ping-check-app.component.html
+++ b/src/app/server-ping-check-app/server-ping-check-app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <!-- Header Section -->
-    <mat-toolbar color="primary">
+    <!-- <mat-toolbar color="primary">
       <span>Server Management Dashboard</span>
-    </mat-toolbar>
+    </mat-toolbar> -->
   
     <div class="content">
       <mat-form-field appearance="outline">
@@ -30,8 +30,8 @@
     </div>
   
     <!-- Footer Section -->
-    <mat-toolbar color="primary" class="footer">
+    <!-- <mat-toolbar color="primary" class="footer">
       <span>&copy; 2024 Your Company. All rights reserved.</span>
-    </mat-toolbar>
+    </mat-toolbar> -->
   </div>
   
