--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -319,6 +319,6 @@
     <mat-tab label="ניהול משימות">
       <app-tab2></app-tab2>
     </mat-tab>
-    <mat-tab label="ניהול הודעות"> Content 3 </mat-tab>
+    <mat-tab label=" סטטוס שרתים"> <app-server-ping-check-app></app-server-ping-check-app></mat-tab>
   </mat-tab-group>
 </div>
