--- a/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
+++ b/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
@@ -15,101 +15,109 @@
       <span>מדד עומס</span>
       <span>{{loginUserName}}</span>
     </mat-toolbar>
-    <div class="content">
-      <div class="cards-container">
-        <mat-card class="table-card">
-          <mat-card-content>
-            <div class="filter-container">
-              <mat-form-field appearance="fill">
-                <mat-label>סינון</mat-label>
-                <input matInput (keyup)="applyFilter($event)" placeholder="סנן לפי שם המחלקה">
-              </mat-form-field>
-              <button mat-icon-button aria-label="Reset filters" matTooltip="אפס חיפוש" (click)="resetFilters()" class="reset-filters-button">
-                <mat-icon>clear</mat-icon>
-              </button>
-            </div>
-            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-              <ng-container matColumnDef="departName">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                 
-                  <mat-form-field  class="header-select">
-                    <mat-select placeholder="בחר מחלקות" [value]="selectedDepartments" (selectionChange)="onDepartmentFilterChange($event.value)" multiple>
-                      <mat-option *ngFor="let department of dataSource.data" [value]="department.departName">
-                        {{department.departName}}
-                      </mat-option>
-                    </mat-select>
+    
+    <mat-tab-group>
+      <mat-tab label="מדד עומס">
+        <div class="content">
+          <div class="cards-container">
+            <mat-card class="table-card">
+              <mat-card-content>
+                <div class="filter-container">
+                  <mat-form-field appearance="fill">
+                    <mat-label>סינון</mat-label>
+                    <input matInput (keyup)="applyFilter($event)" placeholder="סנן לפי שם המחלקה">
                   </mat-form-field>
-                </th>
-                <td mat-cell *matCellDef="let element"> {{element.departName}} </td>
-              </ng-container>
+                  <button mat-icon-button aria-label="Reset filters" matTooltip="אפס חיפוש" (click)="resetFilters()" class="reset-filters-button">
+                    <mat-icon>clear</mat-icon>
+                  </button>
+                </div>
+                <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+                  <ng-container matColumnDef="departName">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                      שם מחלקה
+                      <mat-form-field appearance="fill" class="header-select">
+                        <mat-select placeholder="בחר מחלקות" [value]="selectedDepartments" (selectionChange)="onDepartmentFilterChange($event.value)" multiple>
+                          <mat-option *ngFor="let department of dataSource.data" [value]="department.departName">
+                            {{department.departName}}
+                          </mat-option>
+                        </mat-select>
+                      </mat-form-field>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.departName}} </td>
+                  </ng-container>
 
-              <ng-container matColumnDef="currentPatients">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> סה"כ מטופלים </th>
-                <td mat-cell *matCellDef="let element"> {{element.currentPatients}} </td>
-              </ng-container>
+                  <ng-container matColumnDef="currentPatients">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> סה"כ מטופלים </th>
+                    <td mat-cell *matCellDef="let element"> {{element.currentPatients}} </td>
+                  </ng-container>
 
-              <ng-container matColumnDef="totalBeds">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> סה"כ מיטות </th>
-                <td mat-cell *matCellDef="let element"> {{element.totalBeds}} </td>
-              </ng-container>
+                  <ng-container matColumnDef="totalBeds">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> סה"כ מיטות </th>
+                    <td mat-cell *matCellDef="let element"> {{element.totalBeds}} </td>
+                  </ng-container>
 
-              <ng-container matColumnDef="currentStaff">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> צוות נוכחי </th>
-                <td mat-cell *matCellDef="let element"> {{element.currentStaff}} </td>
-              </ng-container>
+                  <ng-container matColumnDef="currentStaff">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> צוות נוכחי </th>
+                    <td mat-cell *matCellDef="let element"> {{element.currentStaff}} </td>
+                  </ng-container>
 
-              <ng-container matColumnDef="totalStaff">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> תקן צוות </th>
-                <td mat-cell *matCellDef="let element"> {{element.totalStaff}} </td>
-              </ng-container>
+                  <ng-container matColumnDef="totalStaff">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> תקן צוות </th>
+                    <td mat-cell *matCellDef="let element"> {{element.totalStaff}} </td>
+                  </ng-container>
 
-              <ng-container matColumnDef="patientComplexity">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> מורכבות המטופל </th>
-                <td mat-cell *matCellDef="let element"> {{element.patientComplexity}} </td>
-              </ng-container>
+                  <ng-container matColumnDef="patientComplexity">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> מורכבות המטופל </th>
+                    <td mat-cell *matCellDef="let element"> {{element.patientComplexity}} </td>
+                  </ng-container>
 
-              <ng-container matColumnDef="totalLoad">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> מדד עומס (%) </th>
-                <td mat-cell *matCellDef="let element" [ngClass]="getTotalLoadClass(element.totalLoad)"> {{element.totalLoad | number: '1.0-2'}}% </td>
-              </ng-container>
+                  <ng-container matColumnDef="totalLoad">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> מדד עומס (%) </th>
+                    <td mat-cell *matCellDef="let element" [ngClass]="getTotalLoadClass(element.totalLoad)"> {{element.totalLoad | number: '1.0-2'}}% </td>
+                  </ng-container>
 
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClicked(row)"></tr>
+                </table>
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+              </mat-card-content>
+            </mat-card>
+            <mat-card class="gauge-card">
+              <mat-card-header>
+                <mat-card-title>מדד עומס כולל</mat-card-title>
+              </mat-card-header>
+              <mat-card-content>
+                <ngx-gauge
+                  [size]="250"
+                  [value]="gaugeValue"
+                  [min]="0"
+                  [max]="100"
+                  [type]="'full'"
+                  [cap]="'round'"
+                  [thick]="20"
+                  [label]="'מדד עומס כולל'"
+                  [foregroundColor]="getGaugeColor(gaugeValue)"
+                  [backgroundColor]="'#e0e0e0'"
+                  [append]="'%'"
+                  [duration]="1500">
+                </ngx-gauge>
+                <div class="total-patients">
+                  <span>סה"כ מטופלים: {{ totalPatients }}</span>
+                  <span>סה"כ מונשמים: XX</span>
+                  <span>סה"כ הועברו לחדר ניתוח: XX</span>
+                  <span>סה"כ מטופלים בבידוד: XX</span>
+                </div>
+              </mat-card-content>
+            </mat-card>
+          </div>
+        </div>
+      </mat-tab>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onRowClicked(row)"></tr>
-            </table>
-            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-          </mat-card-content>
-        </mat-card>
-        <mat-card class="gauge-card">
-         
-          <mat-card-content>
-            <ngx-gauge
-              [size]="250"
-              [value]="gaugeValue"
-              [min]="0"
-              [max]="100"
-              [type]="'semi'"
-              [cap]="'round'"
-              [thick]="20"
-              [label]="'מדד עומס כולל'"
-              [foregroundColor]="getGaugeColor(gaugeValue)"
-              [backgroundColor]="'#e0e0e0'"
-              [append]="'%'"
-              [duration]="1500">
-            </ngx-gauge>
-            <div class="total-patients">
-              <span>סה"כ מטופלים: {{ totalPatients }}</span>
-              <span>סה"כ מונשמים:XX</span>
-              <span>סה"כ הועברו לחדר ניתוח:XX</span>
-              <span>סה"כ מטופלים בבידוד:XX</span>
-
-            </div>
-          </mat-card-content>
-        </mat-card>
-      </div>
-    </div>
+      <mat-tab label="רשימת חולים">
+        <div class="content">
+          <app-current-patients></app-current-patients>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
   </mat-sidenav-content>
 </mat-sidenav-container>
-   <mat-toolbar color="primary" class="footer">
-      <span>&copy; משה ממן</span>
-    </mat-toolbar> 
