--- a/src/app/forms/digital-form/digital-form.component.html
+++ b/src/app/forms/digital-form/digital-form.component.html
@@ -1,13 +1,36 @@
-<form [formGroup]="digitalForm" (ngSubmit)="onSubmit()">
-    <mat-form-field>
-      <input matInput placeholder="Person 1 Signature" formControlName="person1" [disabled]="isSigned[0]">
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput placeholder="Person 2 Signature" formControlName="person2" [disabled]="!isSigned[0] || isSigned[1]">
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput placeholder="Person 3 Signature" formControlName="person3" [disabled]="!isSigned[1] || isSigned[2]">
-    </mat-form-field>
-    <button mat-raised-button color="primary" type="submit">Submit</button>
-  </form>
+<mat-card>
+    <mat-card-header>
+      <mat-card-title>New Employee Approval Form</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <form [formGroup]="approvalForm" (ngSubmit)="onSubmit()">
+        <mat-form-field appearance="fill">
+          <mat-label>Employee Name</mat-label>
+          <input matInput formControlName="employeeName" required>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Employee ID</mat-label>
+          <input matInput formControlName="employeeId" required>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Department</mat-label>
+          <mat-select formControlName="department" required>
+            <mat-option *ngFor="let dept of departments" [value]="dept">
+              {{dept}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+          <mat-label>Position</mat-label>
+          <input matInput formControlName="position" required>
+        </mat-form-field>
+        <div formGroupName="approvals">
+          <mat-checkbox formControlName="approver1">Approver 1</mat-checkbox>
+          <mat-checkbox formControlName="approver2">Approver 2</mat-checkbox>
+          <mat-checkbox formControlName="approver3">Approver 3</mat-checkbox>
+        </div>
+        <button mat-raised-button color="primary" type="submit">Submit</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
   
