--- a/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
+++ b/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
@@ -144,7 +144,13 @@
           
           <ng-template #graphView>
             <div class="chart-container">
-              <button mat-raised-button (click)="switchChartType()">החלף לגרף עוגה/עמודות</button>
+              <img
+              src="../../../../assets/pieIcon.jpg"
+              matTooltip="  החלף לגרף עוגה"
+              (click)="switchChartType()"
+              width="50px"
+            />
+              <!-- <button mat-raised-button (click)="switchChartType()">החלף לגרף עוגה/עמודות</button> -->
               <div style="width: 100%; height: 400px;">
                 <canvas #chartCanvas></canvas>
               </div>
