--- a/src/app/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/admin-dashboard/admin-dashboard.component.scss
@@ -421,3 +421,15 @@ canvas {
   height: 300px; // Example, adjust based on your actual layout and space available
   margin-bottom: 5px; // Provides spacing between the chart and any following content
 }
+.green-text {
+  color: green;
+}
+
+.red-text {
+  color: red;
+}
+
+.status-icon {
+  vertical-align: middle;
+  margin-right: 8px;
+}
