--- a/src/app/departmentLoad/department-detail/department-detail.component.html
+++ b/src/app/departmentLoad/department-detail/department-detail.component.html
@@ -1,17 +1,19 @@
 <mat-dialog-content *ngIf="department" class="department-dialog" dir="rtl">
-    <h2 mat-dialog-title class="dialog-title">{{ department.departName }}</h2>
-    <div class="department-details">
-      <p><strong>סה"כ מטופלים:</strong> {{ department.currentPatients }}</p>
-      <p><strong>סה"כ מיטות:</strong> {{ department.totalBeds }}</p>
-      <p><strong>סוג מחלקה:</strong> {{ department.departType }}</p>
-      <p><strong>צוות נוכחי:</strong> {{ department.currentStaff }}</p>
-      <p><strong>תקן צוות:</strong> {{ department.totalStaff }}</p>
-      <p><strong>מורכבות המטופל:</strong> {{ department.patientComplexity }}</p>
-      <p><strong>קוד מחלקה בקמיליון:</strong> {{ department.departChameleonCode }}</p>
-      <p><strong>מדד עומס:</strong> {{ department.totalLoad | number: '1.0-2' }}%</p>
-    </div>
-    <div mat-dialog-actions class="dialog-actions">
-      <button mat-button mat-raised-button color="primary" (click)="onClose()">Close</button>
-    </div>
-  </mat-dialog-content>
-  
+  <h2 mat-dialog-title class="dialog-title">{{ department.departName }}</h2>
+  <div class="department-details">
+    <!-- <p><strong>סה"כ מטופלים:</strong> {{ department.currentPatients }}</p>
+    <p><strong>סה"כ מיטות:</strong> {{ department.totalBeds }}</p>
+    <p><strong>סוג מחלקה:</strong> {{ department.departType }}</p>
+    <p><strong>צוות נוכחי:</strong> {{ department.currentStaff }}</p>
+    <p><strong>תקן צוות:</strong> {{ department.totalStaff }}</p>
+    <p><strong>מורכבות המטופל:</strong> {{ department.patientComplexity }}</p>
+    <p><strong>קוד מחלקה בקמיליון:</strong> {{ department.departChameleonCode }}</p> -->
+    <p><strong>מדד עומס:</strong> {{ department.totalLoad | number: '1.0-2' }}%</p>
+    <p><strong>מונשמים:</strong> {{ department.onLifeSupport }}</p>
+    <p><strong>הבידוד הגנתי:</strong> {{ department.quarantineDef }}</p>
+    <p><strong>בידוד מגע ואויר:</strong> {{ department.quarantineAirAndTouch }}</p>
+  </div>
+  <div mat-dialog-actions class="dialog-actions">
+    <button mat-button mat-raised-button color="primary" (click)="onClose()">Close</button>
+  </div>
+</mat-dialog-content>
