--- a/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
+++ b/src/app/departmentLoad/department-load-dashboard/department-load-dashboard.component.html
@@ -15,7 +15,7 @@
       <span>מדד עומס</span>
       <span>{{loginUserName}}</span>
     </mat-toolbar>
-    
+
     <mat-tab-group>
       <mat-tab label="מדד עומס">
         <div class="content">
@@ -28,21 +28,24 @@
               <button mat-icon-button aria-label="Reset filters" matTooltip="אפס חיפוש" (click)="resetFilters()" class="reset-filters-button">
                 <mat-icon>clear</mat-icon>
               </button>
+              
+              <!-- Conditionally display the graph and table icons -->
               <img
-    *ngIf="showTable"
-    src="../../../../assets/graphIcon.png"
-    matTooltip="החלף לגרף"
-    (click)="toggleView()"
-    width="50px"
-  />
-  
-  <img
-    *ngIf="!showTable"
-    src="../../../../assets/TableIcon.png"
-    matTooltip="החלף לטבלה"
-    (click)="toggleView()"
-    width="50px"
-  />
+                *ngIf="showTable"
+                src="../../../../assets/graphIcon.png"
+                matTooltip="החלף לגרף"
+                (click)="toggleView()"
+                width="50px"
+              />
+              
+              <img
+                *ngIf="!showTable"
+                src="../../../../assets/TableIcon.png"
+                matTooltip="החלף לטבלה"
+                (click)="toggleView()"
+                width="50px"
+              />
+              
               <img
                 src="../../../../assets/excel.png"
                 alt="Download"
@@ -53,23 +56,14 @@
               />
             </div>
           </div>
-          
+
           <div *ngIf="showTable; else graphView">
             <div class="cards-container">
               <mat-card class="table-card">
                 <mat-card-content>
                   <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                     <ng-container matColumnDef="departName">
-                      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                        שם מחלקה
-                        <mat-form-field appearance="fill" class="header-select">
-                          <mat-select placeholder="בחר מחלקות" [value]="selectedDepartments" (selectionChange)="onDepartmentFilterChange($event.value)" multiple>
-                            <mat-option *ngFor="let department of dataSource.data" [value]="department.departName">
-                              {{department.departName}}
-                            </mat-option>
-                          </mat-select>
-                        </mat-form-field>
-                      </th>
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> שם מחלקה </th>
                       <td mat-cell *matCellDef="let element"> {{element.departName}} </td>
                     </ng-container>
 
@@ -97,6 +91,21 @@
                       <th mat-header-cell *matHeaderCellDef mat-sort-header> מורכבות המטופל </th>
                       <td mat-cell *matCellDef="let element"> {{element.patientComplexity}} </td>
                     </ng-container>
+
+                    <!-- <ng-container matColumnDef="onLifeSupport">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> מונשמים </th>
+                      <td mat-cell *matCellDef="let element"> {{element.onLifeSupport}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="quarantineDef">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> הבידוד הגנתי </th>
+                      <td mat-cell *matCellDef="let element"> {{element.quarantineDef}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="quarantineAirAndTouch">
+                      <th mat-header-cell *matHeaderCellDef mat-sort-header> בידוד מגע ואויר </th>
+                      <td mat-cell *matCellDef="let element"> {{element.quarantineAirAndTouch}} </td>
+                    </ng-container> -->
 
                     <ng-container matColumnDef="totalLoad">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header> מדד עומס (%) </th>
@@ -142,38 +151,39 @@
                   </ngx-gauge>
                   <div class="total-patients">
                     <span>סה"כ מטופלים: {{ totalPatients }}</span>
-                    <span>סה"כ מונשמים: XX</span>
+                    <span>סה"כ מונשמים: {{ totalOnLifeSupport }}</span>
                     <span>סה"כ הועברו לחדר ניתוח: XX</span>
-                    <span>סה"כ מטופלים בבידוד: XX</span>
+                    <span>סה"כ הבידוד הגנתי: {{ totalQuarantineDef }}</span>
+                    <span>סה"כ בידוד מגע ואויר: {{ totalQuarantineAirAndTouch }}</span>
                   </div>
+                  
                 </mat-card-content>
               </mat-card>
             </div>
           </div>
-          
+
           <ng-template #graphView>
             <div class="chart-container">
               <img
-              *ngIf="chartType === 'bar'"
-              src="../../../../assets/pieIcon.jpg"
-              matTooltip="החלף לגרף עוגה"
-              (click)="switchChartType()"
-              width="50px"
-            />
-            
-            <img
-              *ngIf="chartType === 'pie'"
-              src="../../../../assets/BarIcon.png"
-              matTooltip="החלף לגרף עמודות"
-              (click)="switchChartType()"
-              width="50px"
-            />
+                *ngIf="chartType === 'bar'"
+                src="../../../../assets/pieIcon.jpg"
+                matTooltip="החלף לגרף עוגה"
+                (click)="switchChartType()"
+                width="50px"
+              />
+              
+              <img
+                *ngIf="chartType === 'pie'"
+                src="../../../../assets/BarIcon.png"
+                matTooltip="החלף לגרף עמודות"
+                (click)="switchChartType()"
+                width="50px"
+              />
               <div style="width: 100%; height: 400px;">
                 <canvas #chartCanvas></canvas>
               </div>
             </div>
           </ng-template>
-          
         </div>
       </mat-tab>
 
